Minor tweaks and coding page